--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,6 +687,52 @@ section {
   padding-top: 0;
 }
 
+.counts .blah-box {
+  box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  width: 100%;
+}
+
+.counts .count-box i {
+  display: block;
+  font-size: 30px;
+  color: #ed502e;
+  float: left;
+}
+
+.counts .count-box span {
+  font-size: 42px;
+  line-height: 24px;
+  display: block;
+  font-weight: 700;
+  color: #0b2341;
+  margin-left: 50px;
+}
+
+.counts .blah-box p {
+  padding: 30px 0 0 0;
+  margin: 0;
+  /* font-family: "Raleway", sans-serif; */
+  font-size: 14px;
+}
+
+.counts .blah-box h3{
+  font-weight: 600;
+  display: block;
+  margin-top: 20px;
+  color: #164682;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  transition: ease-in-out 0.3s;
+}
+
+.counts .count-box a:hover {
+  color: #2169c4;
+}
+
+
+
+
 .counts .count-box {
   box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
   padding: 30px;
@@ -2070,7 +2116,7 @@ Events Section
 .insurbtn{
   background-color: #ed3c0d !important;
   color: #fff;
-  
+
   /* padding: 5px; */
 }
 
